<resources>
    <string name="app_name">BazarArabia</string>

    <string name="welcome">BarzarArabia</string>

    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="item_main_image">Main Image</string>



    <string name="str_category_all">All</string>

    <string name="hint_post_title">Ad title(eg: BazarArabia is the best!)</string>
    <string name="hint_post_description">Ad descriptions(Add more details)</string>
    <string name="post_new_btn_text">New Post</string>

    <string name="pick_image_intent_text">Choose the Images</string>

    <string name="cd_main_image">main image</string>

    <string name="action_home">Home</string>
    <string name="action_saved">My Favorites</string>
    <string name="action_settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="nav_share">Share this App</string>
    <string name="policy_privacy">Policy privacy</string>
    <string name="action_posts">New post</string>

    <string name="str_sign_in">Sign In</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_signout">Sign Out</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <string name="register_fb_text">Sign Up with Facebook</string>
    <string name="register_gg_text">Sign Up with Google</string>
    <string name="login_fb_text">Sign In with Facebook</string>
    <string name="login_gg_text">Sign In with Google</string>

    <string name="str_sign_up_email">Sign Up with Email</string>

    <string name="facebook_app_id">1392241170836988</string>


    <!-- Material Design Icons -->
    <string name="material_icon_account">&#xe800;</string>
    <string name="material_icon_account_multiple">&#xe8dc;</string>
    <string name="material_icon_email">&#xe99c;</string>
    <string name="material_icon_password">&#xe9fa;</string>

    <string name="material_icon_point_full">&#xe869;</string>
    <string name="material_icon_point_empty">&#xe868;</string>
    <string name="material_icon_cloud_univ_first">&#xeb54;</string>
    <string name="material_icon_cloud_univ_second">&#xeb5a;</string>
    <string name="material_icon_cloud_univ_third">&#xeb55;</string>

    <string name="fontello_logo">&#xe8ad;</string>
    <string name="fontello_search">&#xea01;</string>
    <string name="fontello_microfon">&#xea18;</string>

    <string name="material_icon_go_right">&#xe876;</string>

    <string name="please_signin">Hi there! Please Sign in</string>
    <string name="please_signup">Hi there! Please Sign Up</string>

    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="signup_button">Sign Up</string>

    <string name="error_mail_valide">Please enter a valid E-mail</string>
    <string name="error_short_value">Your field is too short</string>
    <string name="error_password_confirm">Passwords do not match</string>
    <string name="error_password_short">Please enter a valid password</string>

    <string name="action_logout">Logout</string>
    <string name="login_button_text">Sign In</string>

    <string name="detail_title">Title</string>
    <string name="detail_description">orem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta</string>
</resources>
