<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color_grey_200"
    android:padding="@dimen/loginregister_layout_padding">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_input_layout_email"
            android:layout_width="match_parent"
            android:theme="@style/textview_login"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textColorHint="@color/colorPrimary"
            >

            <EditText
                android:id="@+id/login_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimaryDarker"
                android:inputType="textEmailAddress"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_input_layout_password"
            android:layout_width="match_parent"
            android:theme="@style/textview_login"
            android:hint="@string/hint_password"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary"
            >

            <EditText
                android:id="@+id/login_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/loginregister_layout_common_margin"
            android:theme="@style/Button_login" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/divider_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginregister_layout_common_margin"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No account yet? Creat One"/>

    </LinearLayout>

    <View
        android:id="@+id/divider_top"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/loginregister_layout_tb_margin"
        android:layout_marginBottom="@dimen/loginregister_layout_common_margin"
        android:layout_below="@+id/divider_layout"
        android:background="@color/colorPrimaryDarker" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/loginregister_layout_common_margin">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/signin_button_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/auth_setup_tb_button_size"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:textSize="@dimen/auth_setup_buttons_textsize"
            facebook:com_facebook_login_text="@string/login_fb_text" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/register_button_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_gg_text"
            />


    </LinearLayout>

</LinearLayout>