<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_profile_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <ImageView
        android:id="@+id/navigation_header_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/cd_main_image"
        android:scaleType="centerCrop"
        android:src="@drawable/navigation_hearder_image" />
    <LinearLayout
        android:id="@+id/userProfileInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <ImageView
            android:id="@+id/navigation_profile_photo"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="20dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="4dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <bazararabia.com.and.font.RobotoTextView
                android:id="@+id/navigation_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="Joe Smith"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:typeface="robotoLight" />

            <bazararabia.com.and.font.RobotoTextView
                android:id="@+id/navigation_profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="xxx@yahoo.com"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                app:typeface="robotoLight" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id = "@+id/header_button_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/userProfileInfoLayout"
        android:layout_alignBottom="@+id/navigation_header_image"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="@dimen/sign_button_width"
            android:layout_height="@dimen/sign_button_height"
            android:textSize="@dimen/sign_button_textsize"
            android:textColor="@android:color/white"
            android:text="@string/str_sign_up"
            android:background="@drawable/sign_rountrect_btn"
            android:layout_marginRight="40dp"
            />
        <Button
            android:id="@+id/btnSignInOut"
            android:layout_width="@dimen/sign_button_width"
            android:layout_height="@dimen/sign_button_height"
            android:textSize="@dimen/sign_button_textsize"
            android:textColor="@android:color/white"
            android:text="@string/str_sign_in"
            android:background="@drawable/sign_rountrect_btn"
            />

    </LinearLayout>
    <View
        android:id="@+id/divider_top"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/navigation_header_image"
        android:background="@color/material_light_yellow_600" />
</RelativeLayout>