<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color_grey_300"
    android:orientation="vertical"
    >
    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/new_post_layout_lr_margin"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/post_image_list_view"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/new_post_recycle_view_height"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="6dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="10dip"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dip">
                <!-- Text Label -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Category:" />

                <!-- Spinner Element -->
                <Spinner
                    android:id="@+id/post_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_title_description_layout"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                >

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/post_input_layout_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_post_title"
                    android:maxLines="1"
                    android:theme="@style/text_input_layout"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    >
                    <EditText
                        android:id="@+id/post_input_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:padding="10dp"
                        />
                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/main_color_grey_500"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/post_input_layout_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_post_description"
                    android:maxLines="3"
                    android:theme="@style/text_input_layout"
                    android:paddingTop="5dp"
                    android:paddingBottom="40dp"
                    >

                    <EditText
                        android:id="@+id/post_input_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:padding="10dp"
                        />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/post_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_new_btn_text"
        android:textColor="@color/white"
        android:theme="@style/button_style"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />
</LinearLayout>